# simple_c_cpp_utils

./: CMakeLists.txt  README.md
include/: my_cpp_tools.h  my_str_utils.h
tests/: test_str_utils.cpp
